(some final updates) figures paths altered to macbook, figures sorted out, updates to title.

--- a/Thesis/Title/title.tex
+++ b/Thesis/Title/title.tex
@@ -156,7 +156,8 @@ born in Nijmegen, the Netherlands
 \vfill
 
 %AMOLF LOGO
-\includegraphics[height=1in]{./title/logoamolf/1111_AmolfLogo_pms_png}
+%\includegraphics[height=1in]{./title/logoamolf/1111_AmolfLogo_pms_png}
+\includegraphics[height=1in]{newlogo_1709_AMOLF_logo_fc}
 
 %\vfill
 
@@ -170,17 +171,17 @@ This work is part of the Netherlands Organisation for \mbox{Scientific} Research
 \noindent
 \begin{tabular}{@{}p{0.2\textwidth}@{}p{0.8\textwidth}}
     \textit{Printed by:} & \red{XXX, PLAATS, The Netherlands} \\[\medskipamount]
-    \textit{Cover:} & \red{DESCRIPTION.}
+    \textit{Cover:} & Cover design by Martijn Wehrens. The lines are based on actual data of fluctuating bacterial growth rates. The group of three objects on the front are an artist's impression of \textit{Escherichia coli} bacteria. The typeface of the title is called Road Rage and was designed by Youssef Habchi.
 \end{tabular}
 
 \vspace{2\bigskipamount} %{4\bigskipamount}
 
-\noindent Copyright \textcopyright\ \red{2019} by M.~Wehrens
+\noindent Copyright \textcopyright\ 2019 by M.~Wehrens
 
 
 
 \medskip
-\noindent \red{ISBN XXXX}
+\noindent ISBN 978-94-92323-25-5
 
 \medskip
 \noindent A digital version of this thesis can be obtained from \url{http://www.amolf.nl} and from \url{http://repository.tudelft.nl}. Printed copies can be obtained by request via email to library@amolf.nl.
