--- a/Thesis/dissertation.tex
+++ b/Thesis/dissertation.tex
@@ -105,9 +105,30 @@
     % https://tex.stackexchange.com/questions/89989/add-tif-image-to-latex
 
 % Graphic paths
-\graphicspath{{./Figures/}{./ChapterX_Modeling/drawings_png/}{./ChapterX_Ribosomes/eps_files/}{./Chapter2_Methods/Figures/}
-	{./ChapterX_CRP/Figures/}{./ChapterX_CRP/Figures/matlabExport/}{./ChapterX_CRP/Figures/matlabExport_pulsing/}{./ChapterX_CRP/Figures/matlabExport_model/}{./ChapterX_CRP/Figures/matlabExport_platereader/}{./ChapterX_Ribosomes/Figures/MatlabExport/CCs/}{./ChapterX_Ribosomes/Figures/MatlabExport/switchplots_2018revisited/}{./ChapterX_Ribosomes/Figures/}{./ChapterX_Literaturereview/Figures/}{./ChapterX_Filarecovery/Figures/}{./Chapter1_Introduction/}{./Cv/Figures/}
-    {T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Modeling/drawings_png/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/eps_files/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/Chapter2_Methods/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport_pulsing/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport_model/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport_platereader/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/Figures/MatlabExport/CCs/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/Figures/MatlabExport/switchplots_2018revisited/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/Figures/}}
+\graphicspath{
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/Chapter1_introduction/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/Chapter2_methods_figures/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_CRP/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_CRP/matlabExport/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_CRP/matlabExport_pulsing/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_CRP/matlabExport_model/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_CRP/matlabExport_platereader/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_Filarecovery/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_Literaturereview/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_Modeling/}
+		{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_Modeling/drawings_png/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_Ribosomes/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_Ribosomes/MatlabExport/CCs/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/ChapterX_Ribosomes/MatlabExport/switchplots_2018revisited/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/Cover/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/Cv/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/Title/}
+	{/Users/m.wehrens/Documents/Files_PhD/Figures_Thesis/misc/}
+}
+%\graphicspath{{./Figures/}{./ChapterX_Modeling/drawings_png/}{./ChapterX_Ribosomes/eps_files/}{./Chapter2_Methods/Figures/}
+	%{./ChapterX_CRP/Figures/}{./ChapterX_CRP/Figures/matlabExport/}{./ChapterX_CRP/Figures/matlabExport_pulsing/}{./ChapterX_CRP/Figures/matlabExport_model/}{./ChapterX_CRP/Figures/matlabExport_platereader/}{./ChapterX_Ribosomes/Figures/MatlabExport/CCs/}{./ChapterX_Ribosomes/Figures/MatlabExport/switchplots_2018revisited/}{./ChapterX_Ribosomes/Figures/}{./ChapterX_Literaturereview/Figures/}{./ChapterX_Filarecovery/Figures/}{./Chapter1_Introduction/}{./Cv/Figures/}
+    %{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Modeling/drawings_png/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/eps_files/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/Chapter2_Methods/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport_pulsing/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport_model/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_CRP/Figures/matlabExport_platereader/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/Figures/MatlabExport/CCs/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/Figures/MatlabExport/switchplots_2018revisited/}{T:/TRAVELING_DATA/THESIS_TEMP_COPY/Thesis/ChapterX_Ribosomes/Figures/}}
 % log options
 \listfiles % This will log the image files used at time of rendering
 
