(smallfixes) after proof was printed

--- a/Thesis/Title/title.tex
+++ b/Thesis/Title/title.tex
@@ -170,7 +170,7 @@ This work is part of the Netherlands Organisation for \mbox{Scientific} Research
 
 \noindent
 \begin{tabular}{@{}p{0.2\textwidth}@{}p{0.8\textwidth}}
-    \textit{Printed by:} & \red{XXX, PLAATS, The Netherlands} \\[\medskipamount]
+    \textit{Printed by:} & GVO, Ede, The Netherlands \\[\medskipamount]
     \textit{Cover:} & Cover design by Martijn Wehrens. The lines are based on actual data of fluctuating bacterial growth rates. The group of three objects on the front are an artist's impression of \textit{Escherichia coli} bacteria. The typeface of the title is called Road Rage and was designed by Youssef Habchi.
 \end{tabular}
 
